bdr.BDR.scala.error
Compilation error:
BDR:4: error: ')' expected but '=' found.
    if(litMessage(): String = R){
                            ^BDR:8: error: illegal start of simple expression
    if(litMessage(): String = L){
                   ^