bdr.BDR.scala.code
var fini = false
while (fini != true){
  if (estSurMessage){
    if(litMessage(): String = R){
      droite()
      avancer()
    }
    if(litMessage(): String = L){
      gauche()
      avancer()
    }
    if(litMessage(): String = I){
      droite()
      droite()
      avancer()
    }
    if(litMessage(): String = A){
      avancer()
    }
    if(litMessage(): String = B){
      avancer()
      avancer()
    }
    if(litMessage(): String = C){
      avancer()
      avancer()
      avancer()
    }
    if(litMessage(): String = Z){
      reculer()
    }
    if(litMessage(): String = Y){
      reculer()
      reculer()
    }
    if(litMessage(): String = X){
      reculer()
      reculer()
      reculer()
    }
  } else {
    fini = true
  }
}